code structure reformatted