@@ -70,43 +70,51 @@ package org.prog3.project;//package org.prog3.project;
 //}
 
 
+import org.prog3.project.Transaction.Transaction;
+import org.prog3.project.Transaction.TransactionInput;
+import org.prog3.project.Transaction.TransactionOutput;
+
 import java.security.Security;
 import java.util.ArrayList;
 import java.util.HashMap;
 
 public class PikkwolfChain {
 
-    public static ArrayList<Block> blockchain = new ArrayList<Block>();
-    public static HashMap<String,TransactionOutput> UTXOs = new HashMap<String,TransactionOutput>();
+    public static ArrayList<Block> blockchain = new ArrayList<>();
+    public static HashMap<String, TransactionOutput> UTXOs;
 
-    public static int difficulty = 3;
+    static {
+        UTXOs = new HashMap<>();
+    }
+
+    public static int difficulty = 6;
     public static float minimumTransaction = 0.1f;
     public static Wallet walletA;
     public static Wallet walletB;
     public static Transaction genesisTransaction;
 
     public static void main(String[] args) {
-        //add our blocks to the blockchain ArrayList:
+        // add our blocks to the blockchain ArrayList:
         Security.addProvider(new org.bouncycastle.jce.provider.BouncyCastleProvider()); //Setup Bouncey castle as a Security Provider
 
-        //Create wallets:
+        // Create wallets:
         walletA = new Wallet();
         walletB = new Wallet();
         Wallet coinbase = new Wallet();
 
-        //create genesis transaction, which sends 100 NoobCoin to walletA:
+        // create genesis transaction, which sends 100 NoobCoin to walletA:
         genesisTransaction = new Transaction(coinbase.publicKey, walletA.publicKey, 100f, null);
-        genesisTransaction.generateSignature(coinbase.privateKey);	 //manually sign the genesis transaction
-        genesisTransaction.transactionId = "0"; //manually set the transaction id
+        genesisTransaction.generateSignature(coinbase.privateKey);     // manually sign the genesis transaction
+        genesisTransaction.transactionId = "0"; // manually set the transaction id
         genesisTransaction.outputs.add(new TransactionOutput(genesisTransaction.reciepient, genesisTransaction.value, genesisTransaction.transactionId)); //manually add the Transactions Output
-        UTXOs.put(genesisTransaction.outputs.get(0).id, genesisTransaction.outputs.get(0)); //its important to store our first transaction in the UTXOs list.
+        UTXOs.put(genesisTransaction.outputs.getFirst().id, genesisTransaction.outputs.getFirst()); //it's important to store our first transaction in the UTXOs list.
 
         System.out.println("Creating and Mining Genesis block... ");
         Block genesis = new Block("0");
         genesis.addTransaction(genesisTransaction);
         addBlock(genesis);
 
-        //testing
+        // testing
         Block block1 = new Block(genesis.hash);
         System.out.println("\nWalletA's balance is: " + walletA.getBalance());
         System.out.println("\nWalletA is Attempting to send funds (40) to WalletB...");
@@ -124,7 +132,7 @@ public class PikkwolfChain {
 
         Block block3 = new Block(block2.hash);
         System.out.println("\nWalletB is Attempting to send funds (20) to WalletA...");
-        block3.addTransaction(walletB.sendFunds( walletA.publicKey, 20));
+        block3.addTransaction(walletB.sendFunds(walletA.publicKey, 20));
         System.out.println("\nWalletA's balance is: " + walletA.getBalance());
         System.out.println("WalletB's balance is: " + walletB.getBalance());
 
@@ -132,82 +140,71 @@ public class PikkwolfChain {
 
     }
 
-    public static Boolean isChainValid() {
+    public static void isChainValid() {
         Block currentBlock;
         Block previousBlock;
         String hashTarget = new String(new char[difficulty]).replace('\0', '0');
-        HashMap<String,TransactionOutput> tempUTXOs = new HashMap<String,TransactionOutput>(); //a temporary working list of unspent transactions at a given block state.
-        tempUTXOs.put(genesisTransaction.outputs.get(0).id, genesisTransaction.outputs.get(0));
+        HashMap<String, TransactionOutput> tempUTXOs = new HashMap<>(); //a temporary working list of unspent transactions at a given block state.
+        tempUTXOs.put(genesisTransaction.outputs.getFirst().id, genesisTransaction.outputs.getFirst());
 
-        //loop through blockchain to check hashes:
-        for(int i=1; i < blockchain.size(); i++) {
-
+        // loop through blockchain to check hashes:
+        for (int i = 1; i < blockchain.size(); i++) {
             currentBlock = blockchain.get(i);
-            previousBlock = blockchain.get(i-1);
-            //compare registered hash and calculated hash:
-            if(!currentBlock.hash.equals(currentBlock.calculateHash()) ){
+            previousBlock = blockchain.get(i - 1);
+            // compare registered hash and calculated hash:
+            if (!currentBlock.hash.equals(currentBlock.calculateHash())) {
                 System.out.println("#Current Hashes not equal");
-                return false;
+                return;
             }
-            //compare previous hash and registered previous hash
-            if(!previousBlock.hash.equals(currentBlock.prevHash) ) {
+            // compare previous hash and registered previous hash
+            if (!previousBlock.hash.equals(currentBlock.prevHash)) {
                 System.out.println("#Previous Hashes not equal");
-                return false;
+                return;
             }
-            //check if hash is solved
-            if(!currentBlock.hash.substring( 0, difficulty).equals(hashTarget)) {
+            // check if hash is solved
+            if (!currentBlock.hash.substring(0, difficulty).equals(hashTarget)) {
                 System.out.println("#This block hasn't been mined");
-                return false;
+                return;
             }
 
-            //loop thru blockchains transactions:
+            // loop through blockchains transactions:
             TransactionOutput tempOutput;
-            for(int t=0; t <currentBlock.transactions.size(); t++) {
+            for (int t = 0; t < currentBlock.transactions.size(); t++) {
                 Transaction currentTransaction = currentBlock.transactions.get(t);
-
-                if(!currentTransaction.verifiySignature()) {
+                if (currentTransaction.verifiySignature()) {
                     System.out.println("#Signature on Transaction(" + t + ") is Invalid");
-                    return false;
+                    return;
                 }
-                if(currentTransaction.getInputsValue() != currentTransaction.getOutputsValue()) {
+                if (currentTransaction.getInputsValue() != currentTransaction.getOutputsValue()) {
                     System.out.println("#Inputs are note equal to outputs on Transaction(" + t + ")");
-                    return false;
+                    return;
                 }
-
-                for(TransactionInput input: currentTransaction.inputs) {
+                for (TransactionInput input : currentTransaction.inputs) {
                     tempOutput = tempUTXOs.get(input.transactionOutputId);
-
-                    if(tempOutput == null) {
+                    if (tempOutput == null) {
                         System.out.println("#Referenced input on Transaction(" + t + ") is Missing");
-                        return false;
+                        return;
                     }
-
-                    if(input.UTXO.value != tempOutput.value) {
+                    if (input.UTXO.value != tempOutput.value) {
                         System.out.println("#Referenced input Transaction(" + t + ") value is Invalid");
-                        return false;
+                        return;
                     }
-
                     tempUTXOs.remove(input.transactionOutputId);
                 }
-
-                for(TransactionOutput output: currentTransaction.outputs) {
+                for (TransactionOutput output : currentTransaction.outputs) {
                     tempUTXOs.put(output.id, output);
                 }
-
-                if( currentTransaction.outputs.get(0).reciepient != currentTransaction.reciepient) {
+                if (currentTransaction.outputs.get(0).reciepient != currentTransaction.reciepient) {
                     System.out.println("#Transaction(" + t + ") output reciepient is not who it should be");
-                    return false;
+                    return;
                 }
-                if( currentTransaction.outputs.get(1).reciepient != currentTransaction.sender) {
+                if (currentTransaction.outputs.get(1).reciepient != currentTransaction.sender) {
                     System.out.println("#Transaction(" + t + ") output 'change' is not sender.");
-                    return false;
+                    return;
                 }
-
             }
-
         }
         System.out.println("Blockchain is valid");
-        return true;
     }
 
     public static void addBlock(Block newBlock) {
