@@ -1,5 +1,7 @@
 package org.prog3.project;
 
+import org.prog3.project.Transaction.Transaction;
+
 import java.nio.charset.StandardCharsets;
 import java.security.*;
 import java.util.ArrayList;
@@ -9,7 +11,7 @@ public class StringUtil {
     public static String applySha256(String input) {    // SHA256 hash algorithm
         try {
             MessageDigest digest = MessageDigest.getInstance("SHA-256");
-            //Applies sha256 to our input,
+            // Applies sha256 to the input
             byte[] hash = digest.digest(input.getBytes(StandardCharsets.UTF_8));
             StringBuilder hexString = new StringBuilder(); // This will contain hash as hexadecimal
             for (byte b : hash) {
@@ -23,25 +25,24 @@ public class StringUtil {
         }
     }
 
-    //Applies ECDSA Signature and returns the result ( as bytes ).
     public static byte[] applyECDSASig(PrivateKey privateKey, String input) {
+        // Applies ECDSA Signature and returns the result (as bytes)
         Signature dsa;
-        byte[] output = new byte[0];
+        byte[] output;
         try {
             dsa = Signature.getInstance("ECDSA", "BC");
             dsa.initSign(privateKey);
             byte[] strByte = input.getBytes();
             dsa.update(strByte);
-            byte[] realSig = dsa.sign();
-            output = realSig;
+            output = dsa.sign();
         } catch (Exception e) {
             throw new RuntimeException(e);
         }
         return output;
     }
 
-    //Verifies a String signature
     public static boolean verifyECDSASig(PublicKey publicKey, String data, byte[] signature) {
+        // Verifies a String signature
         try {
             Signature ecdsaVerify = Signature.getInstance("ECDSA", "BC");
             ecdsaVerify.initVerify(publicKey);
@@ -56,24 +57,23 @@ public class StringUtil {
         return Base64.getEncoder().encodeToString(key.getEncoded());
     }
 
-    //Tacks in array of transactions and returns a merkle root.
     public static String getMerkleRoot(ArrayList<Transaction> transactions) {
+        // Tacks in array of transactions and returns a merkle root
         int count = transactions.size();
-        ArrayList<String> previousTreeLayer = new ArrayList<String>();
+        ArrayList<String> previousTreeLayer = new ArrayList<>();
         for (Transaction transaction : transactions) {
             previousTreeLayer.add(transaction.transactionId);
         }
         ArrayList<String> treeLayer = previousTreeLayer;
         while (count > 1) {
-            treeLayer = new ArrayList<String>();
+            treeLayer = new ArrayList<>();
             for (int i = 1; i < previousTreeLayer.size(); i++) {
                 treeLayer.add(applySha256(previousTreeLayer.get(i - 1) + previousTreeLayer.get(i)));
             }
             count = treeLayer.size();
             previousTreeLayer = treeLayer;
         }
-        String merkleRoot = (treeLayer.size() == 1) ? treeLayer.get(0) : "";
-        return merkleRoot;
+        return (treeLayer.size() == 1) ? treeLayer.getFirst() : "";
     }
 
     public static String getDificultyString(int difficulty) {
